some little fixes

--- a/src/stylesheets/init.less
+++ b/src/stylesheets/init.less
@@ -35,7 +35,7 @@ body, html {
 
 body {
   background-color: #343434;
-  font-family: "Bariol";
+  font-family: Bariol, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
